--- a/inventory/host_vars/cnuc-1.yaml
+++ b/inventory/host_vars/cnuc-1.yaml
@@ -12,4 +12,6 @@ control_plane_ips: [
 ]
 control_plane_vip: "10.200.0.49"
 ingress_vip: "10.200.0.50"
-load_balancer_pool_cidr: "10.200.0.50-10.200.0.70"
+load_balancer_pool_cidr: [
+  "10.200.0.50-10.200.0.70"
+]
