--- a/inventory/host_vars/edge-4.yaml
+++ b/inventory/host_vars/edge-4.yaml
@@ -10,4 +10,7 @@ control_plane_ips: [
 ]
 control_plane_vip: "192.168.1.200"
 ingress_vip: "192.168.1.201"
-load_balancer_pool_cidr: "192.168.1.201-192.168.1.230"
+load_balancer_pool_cidr: [
+  "192.168.1.201-192.168.1.205",
+  "192.168.1.210-192.168.1.215"
+]
