--- a/inventory/host_vars/nuc-4.yaml
+++ b/inventory/host_vars/nuc-4.yaml
@@ -10,4 +10,6 @@ control_plane_ips: [
 ]
 control_plane_vip: "192.168.1.140"
 ingress_vip: "192.168.1.141"
-load_balancer_pool_cidr: "192.168.1.141-192.168.1.149"
+load_balancer_pool_cidr: [
+  "192.168.1.141-192.168.1.149"
+]
