--- a/roles/abm-software/vars/main.yml
+++ b/roles/abm-software/vars/main.yml
@@ -14,3 +14,6 @@ root_repository_git_secret_name: "git-creds"
 
 # This is the production project that contains the CDI containers. Need it to replace with the staging dynamically in file
 cdi_staging_project: "anthos-baremetal-release"
+
+# Folder to run installation out of
+abm_install_folder: "/var/abm-install"
