Resolve "Create a script that looks for the "cpumonitor" label on nodes that have VMIs"

--- a/roles/abm-software/tasks/main.yml
+++ b/roles/abm-software/tasks/main.yml
@@ -319,6 +319,12 @@
   - abm-software
   - external-secrets
 
+- name: "Add CPU Monitor KubeVirt service files"
+  include: cpumonitor-service.yaml
+  tags:
+  - cpu-monitor
+  - cdi
+
 ################# Setup secrets for git-creds and namespace repos per each franchise
 
 - name: "Create git-cred secrets in GCP Secret Manager"
