--- a/roles/abm-software/vars/main.yml
+++ b/roles/abm-software/vars/main.yml
@@ -17,3 +17,6 @@ cdi_staging_project: "anthos-baremetal-release"
 
 # Folder to run installation out of
 abm_install_folder: "/var/abm-install"
+
+# CDI add CPU Monitoring flag script run by cron.d
+cdi_cron_script_file: "/var/cdi-check-node.sh"
