--- a/inventory/group_vars/all.yaml
+++ b/inventory/group_vars/all.yaml
@@ -44,6 +44,71 @@ vm_guest_image: "windows-server-2016-eval-en-us.iso"
 #Secret name for longhorn to take backups of volumes and send to cloud storage bucket
 volume_backup_secret_name: gcp-cloud-storage-backup-secret
 
+# All of the Service Accounts used in this solution
+service_accounts: [
+  {
+    name: abm-gcr-agent,
+    keyfile: abm-gcr-agent-creds.json,
+    description: "ABM GCR Agent Account",
+    roles: [
+      "roles/storage.objectViewer"
+    ]
+  },
+  {
+    name: abm-gke-connect-agent,
+    keyfile: abm-gke-connect-agent-creds.json,
+    description: "ABM GKE Connect Agent Service Account",
+    roles: [
+      "roles/gkehub.connect"
+    ]
+  },
+  {
+    name: abm-gke-register-agent,
+    keyfile: abm-gke-register-agent-creds.json,
+    description: "ABM GKE Connect Register Account",
+    roles: [
+      "roles/gkehub.admin"
+    ]
+  },
+  {
+    name: abm-cloud-operations-agent,
+    keyfile: abm-cloud-operations-agent-creds.json,
+    description: "ABM Cloud Operations Service Account",
+    roles: [
+      "roles/logging.logWriter",
+      "roles/monitoring.metricWriter",
+      "roles/stackdriver.resourceMetadata.writer",
+      "roles/monitoring.dashboardEditor"
+    ]
+  },
+  {
+    name: external-secrets-k8s,
+    keyfile: external-secrets-k8s-creds.json,
+    description: "External Secrets Service Account",
+    roles: [
+      "roles/secretmanager.secretAccessor",
+      "roles/secretmanager.viewer"
+    ]
+  },
+  {
+    name: longhorn-cloud-storage,
+    keyfile: longhorn-cloud-storage-creds.json,
+    description: "Longhorn taking volume backups on cloud stoarge ",
+    roles: [
+      "roles/storage.objectAdmin"
+    ]
+  },
+  {
+    name: gateway-connect-agent,
+    keyfile: gateway-connect-agent-creds.json,
+    description: "Agent used for Gateway Connect",
+    roles: [
+      "roles/gkehub.gatewayAdmin",
+      "roles/gkehub.viewer"
+    ]
+  }
+]
+
 # git_creds_gcp_secret_name is the secret created to hold the Git PAT info corresponding to that Namespace Repo
 # franchise_name, franchise_number aren't used
 # Stores: not used now, secrets are created for all franchises in GCP Secrets Manager, ExternalSecrets are controlled in the root-repo for each franchise
