--- a/inventory/host_vars/cnuc-2.yaml
+++ b/inventory/host_vars/cnuc-2.yaml
@@ -1,11 +1,7 @@
-
-## Vars specifically for CNUC2
-
+# Name of the cluster
 cluster_name: "cnuc-1"
+# Used for logging/metrics
+machine_label: "cnuc-2"
 
-control_plane_ip: "10.200.0.3" # TODO: Not functional yet, hardcoded in the config file right now
-control_plane_vip: "10.200.0.49"
-ingress_vip: "10.200.0.50"
-load_balancer_pool_cidr: "10.200.0.50-10.200.0.70"
-
-primary_ip: "10.200.0.2"
+# This machine's IP
+control_plane_ip: "10.200.0.3"
