--- a/inventory/host_vars/cnuc-6.yaml
+++ b/inventory/host_vars/cnuc-6.yaml
@@ -1,11 +1,10 @@
 
 ## Vars specifically for CNUC6
 
+# Name of the cluster
 cluster_name: "cnuc-4"
+# Used for logging/metrics
+machine_label: "cnuc-6"
 
-control_plane_ip: "10.200.0.4" # TODO: Not functional yet, hardcoded in the config file right now
-control_plane_vip: "10.200.0.49"
-ingress_vip: "10.200.0.50"
-load_balancer_pool_cidr: "10.200.0.50-10.200.0.70"
-
-primary_ip: "10.200.0.2"
+# This machine's IP
+control_plane_ip: "10.200.0.4"
