--- a/inventory/host_vars/edge-3.yaml
+++ b/inventory/host_vars/edge-3.yaml
@@ -1,6 +1,7 @@
+# Name of the cluster
 cluster_name: "edge-1"
-cluster_index: 2
+# Used for logging/metrics
+machine_label: "edge-3"
 
+# This machine's IP address
 control_plane_ip: "10.223.62.233"
-
-primary_ip: "10.223.62.231"
