--- a/inventory/host_vars/edge-5.yaml
+++ b/inventory/host_vars/edge-5.yaml
@@ -1,5 +1,7 @@
+# Name of the cluster
 cluster_name: "edge-4"
-cluster_index: 1
+# Used for logging/metrics
+machine_label: "edge-5"
 
-control_plane_ip: "10.120.5.230"
-primary_ip: "10.120.5.231"
+# This machine's IP address
+control_plane_ip: "10.120.5.231"
