--- a/inventory/host_vars/nuc-5.yaml
+++ b/inventory/host_vars/nuc-5.yaml
@@ -1,6 +1,7 @@
+# Cluster Name
 cluster_name: "nuc-4"
-cluster_index: 4
+# Used for logging/metrics
+machine_label: "nuc-5"
 
+# This machine's IP
 control_plane_ip: "192.168.1.15"
-
-primary_ip: "192.168.1.14"
