--- a/roles/abm-install/vars/main.yml
+++ b/roles/abm-install/vars/main.yml
@@ -33,69 +33,5 @@ local_share_pvc_mount: "/opt/localpv-share" # Default value
 # Cluster runtime
 container_runtime: "containerd" # docker or containerd
 
-# Service Account Configuration
-service_accounts: [
-  {
-    name: abm-gcr-agent,
-    keyfile: abm-gcr-agent-creds.json,
-    description: "ABM GCR Agent Account",
-    roles: [
-      "roles/storage.objectViewer"
-    ]
-  },
-  {
-    name: abm-gke-connect-agent,
-    keyfile: abm-gke-connect-agent-creds.json,
-    description: "ABM GKE Connect Agent Service Account",
-    roles: [
-      "roles/gkehub.connect"
-    ]
-  },
-  {
-    name: abm-gke-register-agent,
-    keyfile: abm-gke-register-agent-creds.json,
-    description: "ABM GKE Connect Register Account",
-    roles: [
-      "roles/gkehub.admin"
-    ]
-  },
-  {
-    name: abm-cloud-operations-agent,
-    keyfile: abm-cloud-operations-agent-creds.json,
-    description: "ABM Cloud Operations Service Account",
-    roles: [
-      "roles/logging.logWriter",
-      "roles/monitoring.metricWriter",
-      "roles/stackdriver.resourceMetadata.writer",
-      "roles/monitoring.dashboardEditor"
-    ]
-  },
-  {
-    name: external-secrets-k8s,
-    keyfile: external-secrets-k8s-creds.json,
-    description: "External Secrets Service Account",
-    roles: [
-      "roles/secretmanager.secretAccessor",
-      "roles/secretmanager.viewer"
-    ]
-  },
-  {
-    name: longhorn-cloud-storage,
-    keyfile: longhorn-cloud-storage-creds.json,
-    description: "Longhorn taking volume backups on cloud stoarge ",
-    roles: [
-      "roles/storage.objectAdmin"
-    ]
-  },
-  {
-    name: gateway-connect-agent,
-    keyfile: gateway-connect-agent-creds.json,
-    description: "Agent used for Gateway Connect",
-    roles: [
-      "roles/gkehub.gatewayAdmin",
-      "roles/gkehub.viewer"
-    ]
-  }
-]
-
+# Secret used for Longhorn
 longhorn_secret_name: "longhorn-cloud-storage-hmac"
