--- a/roles/abm-post-install/tasks/main.yml
+++ b/roles/abm-post-install/tasks/main.yml
@@ -31,3 +31,11 @@
   - abm-post-install
   - cdi-install
   - cdi-node-hack
+
+ ### Install Obeservability agents
+- name: "Setup Obeservability Agents on Physical"
+  include: setup-google-observability.yml
+  when: is_cloud_resource is undefined or is_cloud_resource == False
+  tags:
+  - abm-post-install
+  - observability-setup
