--- a/roles/abm-post-install/vars/main.yml
+++ b/roles/abm-post-install/vars/main.yml
@@ -3,3 +3,6 @@ kube_ps1_version: "0.7.0"
 
 # NOTE Duplicate of google_tools vars
 abm_install_user: "el-gato"
+
+# Match with Google-Tools (by convention, not required, but good idea)
+remote_gsa_key: "/var/keys"
