--- a/roles/abm-post-install/tasks/main.yml
+++ b/roles/abm-post-install/tasks/main.yml
@@ -32,6 +32,13 @@
   - cdi-install
   - cdi-node-hack
 
+### Install Auditd
+- name: "Setup Auditd service"
+  include: setup-auditd.yml
+  tags:
+  - abm-post-install
+  - observability-setup
+
  ### Install Obeservability agents
 - name: "Setup Obeservability Agents on Physical"
   include: setup-google-observability.yml
