--- a/roles/ready-ubuntu/tasks/main.yml
+++ b/roles/ready-ubuntu/tasks/main.yml
@@ -135,6 +135,6 @@
 - name: "Setup VLAN Interfaces on Physical Hosts"
   include: setup-vlan-interfaces.yml
   when:
-  - (is_cloud_resource is undefined or is_cloud_resource == False)
+  - (setup_vlan is true) and (is_cloud_resource is undefined or is_cloud_resource == False)
   tags:
   - vlan-setup
