--- a/roles/abm-post-install/tasks/setup-google-observability.yml
+++ b/roles/abm-post-install/tasks/setup-google-observability.yml
@@ -13,6 +13,9 @@
     owner: root
     group: root
     mode: '0755'
+  tags:
+  - observability-agent-install
+  - observability-setup
 
 - name: Create fluentd config folder if not exist
   become: yes
@@ -22,6 +25,9 @@
     owner: root
     group: root
     mode: '0755'
+  tags:
+  - observability-agent-install
+  - observability-setup
 
   ### Configure Monitoring agent
 - name: Copy collectd config
