adding step to reload system daemon

--- a/roles/abm-post-install/tasks/setup-google-observability.yml
+++ b/roles/abm-post-install/tasks/setup-google-observability.yml
@@ -200,6 +200,14 @@
   - observability-service-reset
   - observability-setup
 
+- name: Reset daemon status for systemctl
+  become: yes
+  command:
+    cmd: systemctl daemon-reload
+  tags:
+  - observability-agent-install
+  - observability-service-reset
+  - observability-setup
 
 # Automatically restarting the agent with cron
 - name: Create cron-job to check if the agent is running and then restart the agent in the event that it crashed.
