--- a/inventory/group_vars/all.yaml
+++ b/inventory/group_vars/all.yaml
@@ -52,9 +52,8 @@ volume_backup_secret_name: gcp-cloud-storage-backup-secret
 setup_vlan: false
 vlan_interfaces: []
 
-
 # Observability package
-install_observability: false
+install_observability: true
 
 # All of the Service Accounts used in this solution
 service_accounts: [
