--- a/roles/abm-post-install/tasks/main.yml
+++ b/roles/abm-post-install/tasks/main.yml
@@ -24,6 +24,51 @@
   - abm-post-install
   - kube-ps1
 
+### Create the base directory for dashboard configs
+- name: Create dashboard config directory
+  become: true
+  file:
+    path: "{{ dashboard_config_base }}"
+    state: directory
+    mode: '0755'
+  tags:
+  - abm-post-install
+  - dashboard-install
+
+- name: Decide which monitoring dashboards to install
+  set_fact:
+    monitoring_dashboard_type: "{{ 'cloud' if (is_cloud_resource == true ) else 'edge' }}"
+  tags:
+  - abm-post-install
+  - dashboard-install
+  - one-time
+
+# ### Copy dashbaord files to remote
+- name: Copy dashboard files to remote
+  become: true
+  register: dashboards
+  template:
+    src: "{{ item }}"
+    dest: "{{ dashboard_config_base }}"
+  with_fileglob:
+    - "monitoring-dashboard/{{ monitoring_dashboard_type }}/*.json"
+  tags:
+  - abm-post-install
+  - dashboard-install
+
+### Add custom monitoring dashboards to GCP project
+- name: Add custom monitoring dashboards to GCP Project
+  run_once: true
+  shell: |  # TODO: Add a check to see if the dashboard already exists
+    gcloud --project "{{ google_project_id }}" monitoring dashboards create --config-from-file "{{ item.dest }}"
+  loop: "{{ dashboards.results }}"
+  when:
+    - (primary_cluster_machine is defined)
+    - (primary_cluster_machine == true)
+  tags:
+  - abm-post-install
+  - dashboard-install
+
 ### Setup CDI cpumanager flag for nodes
 - name: "Add CDI required cpumanager label for nodes"
   include: create-cdi-node-label.yaml
