--- a/roles/google-tools/vars/main.yml
+++ b/roles/google-tools/vars/main.yml
@@ -8,7 +8,7 @@ google_project_id: "{{ lookup('env', 'PROJECT_ID') }}"
 tools_base_path: "/var/google-tools-install"
 
 # gcloud version to download (gcloud version) -- roughly kept up-to-date, the system will update when installed, keeping up-to-date just makes the install a little faster
-gcloud_version: "347.0.0"
+gcloud_version: "359.0.0"
 
 # Local GSA Key (needs to be provided via command line vars)
 local_gsa_key: "{{ lookup('env', 'LOCAL_GSA_FILE') }}"
@@ -18,8 +18,8 @@ remote_gsa_key: "/var/keys"
 
 kubectx_version: "0.9.3"
 
-# KubeVirt CLI tool
-virtctl_version: "v0.42.1"
+# KubeVirt CLI tool #TODO: Pull from BMCTL instead of public
+virtctl_version: "v0.40.0"
 
 # K9s binary version (https://github.com/derailed/k9s/releases)
-k9s_version: "v0.24.12"
+k9s_version: "v0.24.15"
