--- a/inventory/host_vars/cnuc-4.yaml
+++ b/inventory/host_vars/cnuc-4.yaml
@@ -9,7 +9,7 @@ machine_label: "cnuc-4"
 # Indicates that this is the primary machine in the cluster (only important for provisioning)
 primary_cluster_machine: true
 # Name of the "store" per the ACM repo
-acm_cluster_name: "store-global"
+acm_cluster_name: "location-2"
 
 # This machine's IP
 control_plane_ip: "10.200.0.2"
