--- a/roles/google-tools/tasks/main.yml
+++ b/roles/google-tools/tasks/main.yml
@@ -122,9 +122,9 @@
 
   - name: Enable services
     command:
-      # https://cloud.google.com/anthos/clusters/docs/bare-metal/1.6/installing/install-prereq#project_prerequisites
-      cmd: gcloud services enable anthos.googleapis.com connectgateway.googleapis.com anthosgke.googleapis.com cloudresourcemanager.googleapis.com container.googleapis.com gkeconnect.googleapis.com gkehub.googleapis.com serviceusage.googleapis.com stackdriver.googleapis.com monitoring.googleapis.com logging.googleapis.com secretmanager.googleapis.com --project={{ google_project_id }}
-    run_once: true # only one machine to do this
+      # https://cloud.google.com/anthos/clusters/docs/bare-metal/latest/installing/install-prereq
+      cmd: gcloud services enable {{ gcp_services_required | join(' ') }} --project={{ google_project_id }}
+    run_once: true # only one in whole inventory to run this
     environment:
       PATH: "{{ tools_base_path }}/google-cloud-sdk/bin:{{ ansible_env.PATH }}"
     tags:
@@ -198,6 +198,7 @@
     - optional
     - tool-install
 
+  # TODO: This can now be pulled from gsutil cp gs://anthos-baremetal-release/bmctl/{{ bmctl_version }}/linux-amd64/virtctl
   - name: Download virtctl (kubevirt CLI)
     get_url:
       url: https://github.com/kubevirt/kubevirt/releases/download/{{ virtctl_version }}/virtctl-{{ virtctl_version }}-linux-amd64
