--- a/roles/ready-ubuntu/tasks/main.yml
+++ b/roles/ready-ubuntu/tasks/main.yml
@@ -126,6 +126,6 @@
 - name: "Setup VLAN Interfaces on Physical Hosts"
   include: setup-vlan-interfaces.yml
   when:
-  - (setup_vlan is true) and (is_cloud_resource is undefined or is_cloud_resource == False)
+  - (setup_vlan == true) and (is_cloud_resource is undefined or is_cloud_resource == false)
   tags:
   - vlan-setup
