--- a/inventory/group_vars/all.yaml
+++ b/inventory/group_vars/all.yaml
@@ -19,7 +19,9 @@ ansible_user: abm-admin
 # Variables assigned to all inventory
 
 google_project_id: "{{ lookup('env', 'PROJECT_ID') }}"
+#NOTE: A copy of this variable is in Molecule test `for google_tools`
 google_region: "{{ lookup('env', 'REGION') | default('us-central1', True) }}"
+#NOTE: A copy of this variable is in Molecule test `for google_tools`
 google_zone: "{{ lookup('env', 'ZONE') | default('us-central1-a', True) }}"
 local_gsa_key: "{{ lookup('env', 'LOCAL_GSA_FILE') }}"
 tools_base_path: "/var/google-tools-install"
@@ -27,6 +29,7 @@ tools_base_path: "/var/google-tools-install"
 kubeconfig_shared_root: "/var/kubeconfig"
 kubeconfig_shared_location: "{{ kubeconfig_shared_root }}/kubeconfig"
 
+#NOTE: A copy of this variable is in Molecule test `for google_tools`
 gcp_services_required:
   - anthosaudit.googleapis.com
   - opsconfigmonitoring.googleapis.com
@@ -48,6 +51,7 @@ gcp_services_required:
 abm_version: "1.9.0" # verify coupling of ABM to BMCTL versions
 # bmctl binary version
 #TODO: set this up to query for the version, then upgrade automatically if updated
+#NOTE: A copy of this variable is in Molecule test `for google_tools`
 bmctl_version: "1.9.0" # If changed, set the `force_tools_upgrade` to true so new version of BMCTL is downloaded
 
 # gsutil ls -al gs://config-management-release/released/
